Promote simplified training workflow
